# kzybala-pl

./: .gitignore  404.html  CNAME  README.md  consulting.html  engineering.html  index.html  package.json  research.html  robots.txt  sitemap.xml  talks.html
.github/workflows/: ci.yml  pages.yml
about/: index.html
academy/: index.html
articles/: index.html  jit-friendly-hot-paths.html  lock-free-can-be-slower.html  zero-allocation-is-not-a-goal.html
assets/css/: styles.css
assets/data/: curriculum.json  labs-index.json
assets/js/: main.js
assets/js/core/: components.js  curriculum.js  keyboard.js  lab-framework.js  metadata.js  registry.js  roadmap.js
assets/js/labs/: cache-hierarchy-lab.js  cache-hierarchy-scenarios.js  cas-contention-lab.js  cas-contention-scenarios.js  false-sharing-lab.js  false-sharing-reducer.js  false-sharing-scenarios.js  jit-pipeline-reducer.js  memory-ordering-lab.js  memory-ordering-scenarios.js  mesi-lab.js  mesi-scenarios.js  prototype.js  ring-buffer-reducer.js  spsc-ring-buffer-lab.js  spsc-ring-buffer-scenarios.js  thread-per-core-lab.js  thread-per-core-scenarios.js
case-studies/: in-memory-decision-runtime.html  index.html  lock-free-infrastructure.html  parallel-payment-engine.html
config/benchmark-hosts/: precision-5810.yaml  schema.json
content/labs/: README.md
content/labs/_shared/: benchmark-profiles.json
content/labs/_template/: exercises.md  lab.json  theory.md
content/labs/benchmark-harness-traps/: benchmark.md  exercises.md  java.md  lab.json  rust.md  sources.md  theory.md
content/labs/benchmark-harness-traps/code/rust/: Cargo.toml
content/labs/benchmark-harness-traps/code/rust/benches/: harness_traps.rs
content/labs/benchmark-harness-traps/code/rust/src/: lib.rs
content/labs/cache-hierarchy/: benchmark.md  exercises.md  java.md  lab.json  legacy-results.json  rust.md  sources.md  theory.md
content/labs/cache-hierarchy/code/rust/: Cargo.toml  README.md
content/labs/cache-hierarchy/code/rust/benches/: cache_hierarchy.rs
content/labs/cache-hierarchy/code/rust/src/: lib.rs
content/labs/cas-contention/: benchmark.md  exercises.md  java.md  lab.json  legacy-results.json  rust.md  sources.md  theory.md
content/labs/cas-contention/code/rust/: Cargo.toml  README.md
content/labs/cas-contention/code/rust/benches/: cas_contention.rs
content/labs/cas-contention/code/rust/src/: lib.rs
content/labs/clocks-latency-histograms/: benchmark.md  exercises.md  java.md  lab.json  rust.md  sources.md  theory.md
content/labs/clocks-latency-histograms/code/rust/: Cargo.toml
content/labs/clocks-latency-histograms/code/rust/benches/: recording_cost.rs
content/labs/clocks-latency-histograms/code/rust/src/: lib.rs
content/labs/false-sharing/: benchmark.md  exercises.md  java.md  lab.json  legacy-results.json  rust.md  sources.md  theory.md
content/labs/false-sharing/code/rust/: Cargo.toml  README.md
content/labs/false-sharing/code/rust/benches/: false_sharing.rs
content/labs/false-sharing/code/rust/src/: lib.rs
content/labs/jit-pipeline/: benchmark.md  exercises.md  java.md  lab.json  rust.md  sources.md  theory.md
content/labs/jit-pipeline/code/rust/: Cargo.toml
content/labs/jit-pipeline/code/rust/src/: lib.rs
content/labs/memory-ordering/: benchmark.md  exercises.md  java.md  lab.json  rust.md  sources.md  theory.md
content/labs/spsc-ring-buffer/code/rust/: Cargo.toml  README.md
content/labs/spsc-ring-buffer/code/rust/benches/: spsc_ring_buffer.rs
content/labs/spsc-ring-buffer/code/rust/src/: lib.rs
content/labs/thread-per-core/code/rust/: Cargo.toml  README.md  rust-toolchain.toml
content/labs/thread-per-core/code/rust/benches/: thread_per_core.rs
content/labs/thread-per-core/code/rust/src/: lib.rs
docs/: DEPLOY-PL.md  benchmark-artifact-layout.md  benchmark-correctness-fixtures.md  benchmark-platform-inventory.md  benchmark-profiles.md  benchmark-publication-procedure.md  benchmark-regression-policy.md  benchmark-results-content-gate.md  benchmark-results-importers.md  benchmark-results-inventory.md  benchmark-results-migration.md  benchmark-results-provenance.md  benchmark-results-rendering.md  benchmark-results-schema.md  components.md  curriculum-manifest.md  design-tokens.md  editorial-rules.md  evidence-maturity.md  evidence-storage-retention.md  keyboard-rules.md  lab-framework.md  lab-metadata-schema.md  linux-evidence-runner.md  measurement-environments.md  new-lab-workflow.md  performance-lab-inventory.md  reduced-motion-policy.md  semantic-states.md
docs/incidents/: 2026-07-17-spsc-jmh-hang.md  2026-07-20-evidence-storage-exhaustion.md
lab/: index.html
lab/cache-hierarchy/: index.html
lab/cas-contention/: index.html
lab/false-sharing/: index.html
lab/memory-ordering/: index.html
lab/mesi/: index.html
lab/spsc-ring-buffer/: index.html
lab/thread-per-core/: index.html
resume/: index.html
scripts/: check-accessibility.js  check-asset-sizes.js  check-no-js-fallback.js  check-pages-smoke.js  check-public-content.js  check-site-consistency.js  generate-labs-index.js  generate-legacy-results.js  generate-sitemap.js  test-benchmark-batch.js  test-benchmark-platform.js  test-benchmark-results.js  test-curriculum.js  test-evidence-storage.js  test-keyboard.js  test-linux-evidence.js  test-reducers.js  test-registry.js  test-snapshots.js  validate-benchmark-results.js  validate-curriculum.js  validate-html.js  validate-labs.js
scripts/__snapshots__/: about__index.html.snap  index.html.snap  lab__false-sharing__index.html.snap  lab__index.html.snap
scripts/benchmark-platform/: capture-env.js  comparability.js  correctness-gate.js  environment.js  print-profile-args.js  profiles.js  run-correctness-gate.js  run-id.js  write-run-artifact.js
scripts/lib/: curriculum.js  dom-stub.js  html.js  labs.js
scripts/performance-lab/: audit-evidence-storage.sh  cleanup-evidence.sh  import-benchmark-batch.sh  import-evidence.sh  import-linux-evidence.mjs  run-all-benchmarks.sh  run-linux-evidence.sh  verify-benchmark-batch.sh  verify-evidence.sh
(+417 files in other folders)
