[package]
name = "benchmark-harness-traps-lab"
version = "0.1.0"
edition = "2021"
description = "Companion code for the Performance Lab \"Benchmark Harness Traps\" lab (kzybala.pl/lab/benchmark-harness-traps/)."
publish = false

[lib]
name = "harness_traps_lab"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5"

# cargo bench always builds this profile (inherits release: opt-level 3,
# no debug assertions). Benchmarking a debug build is the first trap this
# lab teaches — `cargo bench` cannot do it by accident, and the lab's
# commands never override the profile.
[profile.bench]
inherits = "release"

[[bench]]
name = "harness_traps"
harness = false
