[package]
name = "cache-hierarchy-lab"
version = "0.1.0"
edition = "2021"
description = "Companion code for the Performance Lab \"Cache hierarchy\" lab (kzybala.pl/lab/cache-hierarchy/)."
publish = false

[lib]
name = "cache_hierarchy_lab"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cache_hierarchy"
harness = false
