[package]
name = "cas-contention-lab"
version = "0.1.0"
edition = "2021"
description = "Companion code for the Performance Lab \"CAS contention and backoff\" lab (kzybala.pl/lab/cas-contention/)."
publish = false

[lib]
name = "cas_contention_lab"
path = "src/lib.rs"

[dependencies]
# Worker affinity for the native-Linux evidence harness (src/bin/cas_evidence.rs).
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cas_contention"
harness = false
