[package]
name = "false-sharing-lab"
version = "0.1.0"
edition = "2021"
description = "Companion code for the Performance Lab \"False sharing\" lab (kzybala.pl/lab/false-sharing/)."
publish = false

[lib]
name = "false_sharing_lab"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "false_sharing"
harness = false
