[package]
name = "spsc-ring-buffer-lab"
version = "0.1.0"
edition = "2021"
description = "Companion code for the Performance Lab \"SPSC Ring Buffer\" lab (kzybala.pl/lab/spsc-ring-buffer/)."
publish = false

[lib]
name = "spsc_ring_buffer_lab"
path = "src/lib.rs"

[dependencies]
# Worker affinity for the native-Linux evidence harness (src/bin/spsc_evidence.rs).
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "spsc_ring_buffer"
harness = false
