[package]
name = "thread-per-core-lab"
version = "0.1.0"
edition = "2021"
description = "Companion code for the Performance Lab \"Thread-per-Core Architecture\" lab (kzybala.pl/lab/thread-per-core/)."
publish = false

[lib]
name = "thread_per_core_lab"
path = "src/lib.rs"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "thread_per_core"
harness = false
