[package]
name = "thread-per-core-lab"
version = "0.1.0"
edition = "2021"
description = "Companion code for the Performance Lab \"Thread-per-Core Architecture\" lab (kzybala.pl/lab/thread-per-core/)."
publish = false

[lib]
name = "thread_per_core_lab"
path = "src/lib.rs"

[dependencies]
# Worker affinity for the native-Linux evidence harness (src/bin/tpc_evidence.rs).
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "thread_per_core"
harness = false
